styling our board page.  change img size to prevent stretching

--- a/themes/sgsc/sass/_about-our-board.scss
+++ b/themes/sgsc/sass/_about-our-board.scss
@@ -153,7 +153,7 @@ span.text {
   }
 
   .member-picture {
-    height: 282px;
+    height: auto;
     width: 100%;
     margin-bottom: 20px;
     margin-top: 40px;
